# jianjiruanj-cut

./: .gitignore  catch_err.cjs  check_ts.cjs  css_structure.txt  debug_dump.txt  debug_script.cjs  debug_utf8.txt  diagnosis.cjs  dump_errors.cjs  errors.txt  fix_import.cjs  fix_text_tab_state.cjs  fix_ts.cjs  inject_state.cjs  keygen-setup.cjs  keygen.cjs  mod.cjs  my_license.txt  output.txt  package-lock.json  package.json  patch_keystone.cjs  patch_monitor.cjs  patch_monitor_struct.cjs  refactor_color_tab.cjs  refactor_text_tab.cjs  replace_img.cjs  replace_vid.cjs  test_netease.js  tmp-license.cjs  tmp-script.cjs  tmp_tsc_err.tmp  ts-summary.txt  tsc-errors.txt  tsc-out.txt  tsc-out2.txt  tsc_check.txt  tsc_out.txt  tsc_output.txt  tsc_output_2.txt  (+1 more)
scripts/: append-styles.cjs  apply-phase1.cjs  apply-phase23.cjs  clean_unused.cjs  extract-playback.cjs  extract_app_controller.cjs  extract_app_controller_safe.cjs  extract_app_controller_v3.cjs  extract_app_logic.cjs  extract_app_logic_better.cjs  extract_ast_safe.cjs  extract_css.cjs  fix_app_imports.cjs  fix_app_imports2.cjs  fix_app_imports3.cjs  fix_context_menu.cjs  fix_timeline_types.cjs  fix_video_panel.cjs  inject_context.cjs  migrate-zustand.cjs  refactor-extract-audio.cjs  (+13 more)
src-tauri/: Cargo.toml  check_out.txt  err.txt  fix_gpu_threads.py  replace_generate_video.py  rust_err.txt  rust_errors.txt  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: local_tts_engine.py  yt_music_engine.py
src-tauri/src/: lib.rs  main.rs
src-tauri/tmp_api_test/src/: main.rs
(+107 files in other folders)
