[package]
name = "photo_synth_king"
version = "0.1.0"
description = "照片合成视频王"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "photo_synth_king_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
kamadak-exif = "0.5"
chrono = { version = "0.4.44", features = ["clock"] }
rawloader = "0.37.1"
image = "0.25.9"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["json"] }
urlencoding = "2.1.3"
dirs = "5.0"
machine-uid = "0.3"
